--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
   "scripts_url": "http://cdn.kendostatic.com/{version}/js/",
   "scripts_path": "js",
   "scripts": [
-    "kendo.all.min.js"
+    "cultures/kendo.culture.af.min.js"
   ],
   "styles_url": "http://cdn.kendostatic.com/{version}/styles/",
   "styles_path": "styles",
